--- a/index.html
+++ b/index.html
@@ -2,12 +2,33 @@
 <html>
 <head>
 	<title>Elnora Fuentes</title>
+
+		<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+	<!-- Font Awesome -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
 </head>
 <body>
 
-	<h1> This is a thing</h1>
+	<hr>
+	<div class="container">
+		<div class="row">
+			<div class="col-2"><img id="octocat" width=50 src="imgs/octocat.png"></div>
+			<div class="col-8">		
+				<h1>Elnora Fuentes</h1>
+				<h4>Software Engineer</h4>
+			</div>
+			<div class="col-2">
+				<a href="https://www.linkedin.com/in/elnorafuentes/"><i class="fab fa-linkedin fa-2x"></i></a>
+			</div>
+		</div>
+
+		<div><a href="about.html">About Me</a></div>
+
+	</div>
 
 
-	
 </body>
 </html>
