--- a/about.html
+++ b/about.html
@@ -10,24 +10,65 @@
 	<!-- Font Awesome -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
+	<!-- CSS -->
+	<link rel="stylesheet" type="text/css" href="css/index.css">
+
 </head>
 <body>
-	
+
 	<hr>
+
 	<div class="container">
+
 		<div class="row">
-			<div class="col-2"><img id="octocat" width=50 src="imgs/octocat.png"></div>
+			<div class="col-2"><a href="index.html">Home</a></div>
 			<div class="col-8">		
 				<h1>Elnora Fuentes</h1>
-				<h4>Software Engineer</h4>
+				<h4>About Me</h4>
 			</div>
 			<div class="col-2">
 				<a href="https://www.linkedin.com/in/elnorafuentes/"><i class="fab fa-linkedin fa-2x"></i></a>
+				<a href="https://github.com/elnorafuentes"><i class="fab fa-github fa-2x"></i></a>
 			</div>
+		</div>
+		<br>
+
+		<div class="row">
+			<div class="col-lg-4">
+				<div class="card" style="width: 18rem;">
+					<img src="imgs/beige_yarn.jpg" class="card-img-top" alt="beige cable knit pattern">
+					<div class="card-body">
+						<h5 class="card-title">Patterns</h5>
+						<p class="card-text">I like patterns. Finding them, creating them, changing them.</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-lg-4">
+				<div class="card" style="width: 18rem;">
+					<img src="imgs/puzzle.jpeg" class="card-img-top" alt="pile of puzzle pieces">
+					<div class="card-body">
+						<h5 class="card-title">Puzzles</h5>
+						<p class="card-text">I like puzzles. Analyzing and solving them, applying what I've learned from them elsewhere.</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-lg-4">
+				<div class="card" style="width: 18rem;">
+					<img src="imgs/purple_gold_fractal.jpg" class="card-img-top" alt="purple mandala">
+					<div class="card-body">
+						<h5 class="card-title">Purple</h5>
+						<p class="card-text">I like purple. I find it a soothing and pleasant color.</p>
+					</div>
+				</div>
+			</div>
+
+
 		</div>
 
 
-		<a href="index.html">Home</a>
+
 	</div>
 
 
