Gems of War Project
A new folder with new files for a Gems of War project. Arcane.html is a reference for where to farm. Kingdoms.html also a reference for kingdom data.

--- a/index.html
+++ b/index.html
@@ -9,23 +9,29 @@
 	<!-- Font Awesome -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
+	<!-- CSS -->
+	<link rel="stylesheet" type="text/css" href="css/index.css">
+
 </head>
 <body>
 
 	<hr>
 	<div class="container">
 		<div class="row">
-			<div class="col-2"><img id="octocat" width=50 src="imgs/octocat.png"></div>
+			<div class="col-2"><img id="octocat" width=90 src="imgs/octocat.png"></div>
 			<div class="col-8">		
 				<h1>Elnora Fuentes</h1>
 				<h4>Software Engineer</h4>
 			</div>
 			<div class="col-2">
 				<a href="https://www.linkedin.com/in/elnorafuentes/"><i class="fab fa-linkedin fa-2x"></i></a>
+				<a href="https://github.com/elnorafuentes"><i class="fab fa-github fa-2x"></i></a>
 			</div>
 		</div>
 
 		<div><a href="about.html">About Me</a></div>
+
+		<div></div>
 
 	</div>
 
