--- a/gemsofwar/arcane.html
+++ b/gemsofwar/arcane.html
@@ -11,6 +11,22 @@
 </head>
 <body>
 
+	
+	<nav>
+		<div class="container">
+			<div class="row align-items-center">
+				<div class="col-8">		
+					<div class="h3">Gems of War Arcane Traitstone Reference</div>
+				</div>
+				<div class="col-2">
+					<a href="https://www.linkedin.com/in/elnorafuentes/"><i class="fab fa-linkedin fa-2x"></i></a>
+					<a href="https://github.com/elnorafuentes"><i class="fab fa-github fa-2x"></i></a>
+					<a href="index.html">Home</a>
+				</div>
+			</div>
+		</div>
+	</nav>
+	
 	<div class="container-fluid text-dark">
 		<div class="row" id="cards-container">
 		</div>
