--- a/gemsofwar/arcane.html
+++ b/gemsofwar/arcane.html
@@ -25,7 +25,7 @@
 				<div class="col-2">
 					<a href="https://www.linkedin.com/in/elnorafuentes/"><i class="fab fa-linkedin fa-2x"></i></a>
 					<a href="https://github.com/elnorafuentes"><i class="fab fa-github fa-2x"></i></a>
-					<a href="index.html">Home</a>
+					<a href="../index.html">Home</a>
 				</div>
 			</div>
 		</div>
