--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Elnora Fuentes</title>
 
-		<!-- Bootstrap CSS -->
+	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 	<!-- Font Awesome -->
@@ -12,29 +12,108 @@
 	<!-- CSS -->
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 
+	<!-- Google Font -->
+	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i" rel="stylesheet">
+
 </head>
 <body>
-
-	<hr>
+	
 	<div class="container">
-		<div class="row">
-			<div class="col-2"><img id="octocat" width=90 src="imgs/octocat.png"></div>
-			<div class="col-8">		
-				<h1>Elnora Fuentes</h1>
-				<h4>Software Engineer</h4>
+	
+		<header>
+			<div class="row align-items-center">
+				<div class="col-10">		
+					<h1>Elnora Fuentes</h1>
+					<h4>Software Engineer</h4>
+				</div>
+				<div class="col-2">
+					<a href="https://www.linkedin.com/in/elnorafuentes/"><i class="fab fa-linkedin fa-2x"></i></a>
+					<a href="https://github.com/elnorafuentes"><i class="fab fa-github fa-2x"></i></a>
+
+				</div>
 			</div>
-			<div class="col-2">
-				<a href="https://www.linkedin.com/in/elnorafuentes/"><i class="fab fa-linkedin fa-2x"></i></a>
-				<a href="https://github.com/elnorafuentes"><i class="fab fa-github fa-2x"></i></a>
-			</div>
-		</div>
+		</header>
 
-		<div><a href="about.html">About Me</a></div>
+		<br />
 
-		<div></div>
+		<main>
+		<p>Software Engineer in a Database world on an adventure to find a new Software Engineering world. Have skills, will travel - in the greater Denver area.</p>
+		
+			<section id="experience">
+				<div class="h3">Experience</div>
+				<div>Database Engineer</div>
+				<div class="row">
+					<div class="col-md-4">Blue Marble Enterprises, Inc.</div>
+					<div class="col-md-4">Aurora, CO</div>
+					<div class="col-md-4">06/2014 - Present</div>
+				</div>
+				<div>
+					Currently building and maintaining a system of 20 interconnected user interfaces
+					<ul>
+						<li>Using FileMaker scripting for navigation</li>
+						<li>Performing routine maintenance</li>
+						<li>Adding new interfaces as requested</li>
+					</ul>
+					Leading to increasing customer interaction with their data and continuing requests for new features.
+				</div>
+				<br />
+				<div>
+					Created a small scale full stack web application,
+					<ul>
+						<li>Built with HTML, CSS, and JavaScript</li>
+						<li>Using various search APIs to collect search results</li>
+						<li>Using JavaScript to parse and display results to the user</li>
+						<li>Finally using FileMaker PHP API to store search results</li>
+					</ul>
+					Leading to a centralized location for research by the data researcher.				
+				</div>
+			</section>
+			<br />
+			<section id="education">
+				<div class="h3">Education</div>
+				<div class="row justify-content-right">
+					<div class="col-md-6 col-lg-4">
+						<div>Bachelor of Science</div>
+						<div>Computer Science and Engineering</div>
+						<div>Minor in Mathematics</div>
+					</div>
+					<div class="col-md-6 col-lg-4">
+						<div>University of Colorado at Denver</div>
+						<div>May 2014</div>
+					</div>
+				</div>
+			</section>
+			<br />
+			<section id="skills">
+				<div class="h3">Skills</div>
+				<div class="row justify-content-right">
+					<div class="col-md-6 col-lg-4">
+						<div>FileMaker</div>
+						<div>HTML</div>
+						<div>CSS</div>
+						<div>JavaScript</div>
+						<div>C++</div>
+					</div>
+					<div class="col-md-6 col-lg-4">
+						<div>Database Design</div>
+						<div>Software Design and Engineering</div>
+						<div>Problem Solving</div>
+						<div>Team Collaboration</div>
+						<div>Curious, hark-working, always learning</div>
+					</div>
+				</div>
+			</section>
+			<br />
+			<section id="projects">
+				<div class="h3">Projects</div>
+ 				<div><a href="about.html">Grid Practice</a></div>
+ 				<div><a href="gemsofwar/arcane.html">Reference for a mobile game I play</a></div>
+			</section>
+		</main>
 
+		<br />
+		<footer>		
+		</footer>
 	</div>
-
-
 </body>
 </html>
