--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 				<div class="h3">Projects</div>
  				<div><a href="about.html">Grid Practice</a></div>
  				<div><a href="gemsofwar/arcane.html">Reference for a mobile game I play</a></div>
+ 				<div>I went to a <a href="Hackathon/index.html">hackathon</a> and made a thing!</div>
 			</section>
 		</main>
 
