So Many Changes
Moved resume from index.html to resume.html.
New specs.html. Premise and user stories for today's hackathon.
Updated navbars to be consistent.

--- a/about.html
+++ b/about.html
@@ -27,8 +27,9 @@
 				<h4>About Me</h4>
 			</div>
 			<div class="col-2">
-				<a href="https://www.linkedin.com/in/elnorafuentes/"><i class="fab fa-linkedin fa-2x"></i></a>
-				<a href="https://github.com/elnorafuentes"><i class="fab fa-github fa-2x"></i></a>
+					<a href="index.html"><i class="fas fa-home fa-2x fa-icon"></i></a>
+					<a href="https://www.linkedin.com/in/elnorafuentes/"><i class="fab fa-linkedin fa-2x fa-icon"></i></a>
+					<a href="https://github.com/elnorafuentes"><i class="fab fa-github fa-2x fa-icon"></i></a>
 			</div>
 		</div>
 		<br>
