--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
 			<div class="row align-items-center">
 				<div class="col-10">		
 					<h1>Elnora Fuentes</h1>
-					<h4>Software Engineer</h4>
 				</div>
 				<div class="col-2">
-					<a href="https://www.linkedin.com/in/elnorafuentes/"><i class="fab fa-linkedin fa-2x"></i></a>
-					<a href="https://github.com/elnorafuentes"><i class="fab fa-github fa-2x"></i></a>
+					<a href="https://www.linkedin.com/in/elnorafuentes/"><i class="fab fa-linkedin fa-2x fa-icon"></i></a>
+					<a href="https://github.com/elnorafuentes"><i class="fab fa-github fa-2x fa-icon"></i></a>
 
 				</div>
 			</div>
@@ -37,83 +36,55 @@
 		<br />
 
 		<main>
-		<p>Software Engineer in a Database world on an adventure to find a new Software Engineering world. Have skills, will travel - in the greater Denver area.</p>
-		
-			<section id="experience">
-				<div class="h3">Experience</div>
-				<div>Database Engineer</div>
-				<div class="row">
-					<div class="col-md-4">Blue Marble Enterprises, Inc.</div>
-					<div class="col-md-4">Aurora, CO</div>
-					<div class="col-md-4">06/2014 - Present</div>
-				</div>
-				<div>
-					Currently building and maintaining a system of 20 interconnected user interfaces
-					<ul>
-						<li>Using FileMaker scripting for navigation</li>
-						<li>Performing routine maintenance</li>
-						<li>Adding new interfaces as requested</li>
-					</ul>
-					Leading to increasing customer interaction with their data and continuing requests for new features.
-				</div>
-				<br />
-				<div>
-					Created a small scale full stack web application,
-					<ul>
-						<li>Built with HTML, CSS, and JavaScript</li>
-						<li>Using various search APIs to collect search results</li>
-						<li>Using JavaScript to parse and display results to the user</li>
-						<li>Finally using FileMaker PHP API to store search results</li>
-					</ul>
-					Leading to a centralized location for research by the data researcher.				
-				</div>
-			</section>
-			<br />
-			<section id="education">
-				<div class="h3">Education</div>
-				<div class="row justify-content-right">
-					<div class="col-md-6 col-lg-4">
-						<div>Bachelor of Science</div>
-						<div>Computer Science and Engineering</div>
-						<div>Minor in Mathematics</div>
-					</div>
-					<div class="col-md-6 col-lg-4">
-						<div>University of Colorado at Denver</div>
-						<div>May 2014</div>
-					</div>
-				</div>
-			</section>
-			<br />
-			<section id="skills">
-				<div class="h3">Skills</div>
-				<div class="row justify-content-right">
-					<div class="col-md-6 col-lg-4">
-						<div>FileMaker</div>
-						<div>HTML</div>
-						<div>CSS</div>
-						<div>JavaScript</div>
-						<div>C++</div>
-					</div>
-					<div class="col-md-6 col-lg-4">
-						<div>Database Design</div>
-						<div>Software Design and Engineering</div>
-						<div>Problem Solving</div>
-						<div>Team Collaboration</div>
-						<div>Curious, hark-working, always learning</div>
-					</div>
-				</div>
+			<section id="aboutme">
+				<p>I've been in the Metro Denver area for long enough I think I can call myself a native. It's the longest I've lived anywhere what with being an Air Force Brat and all.</p>
+				<p> I like to <a href=
+				"https://www.instagram.com/explore/tags/bulletjournal/">#bulletjournal</a>, <a href="https://www.instagram.com/sketchbooklines/">#doodle</a>, play <a href="https://www.instagram.com/explore/tags/boardgames/?hl=en">#tabletopgames</a> and <a href="https://en.wikipedia.org/wiki/Mobile_game">#mobilegames</a>.</p>
+				<p>My resume is <a href="resume.html">here</a>.</p>
 			</section>
 			<br />
 			<section id="projects">
 				<div class="h3">Projects</div>
  				<div><a href="about.html">Grid Practice</a></div>
- 				<div><a href="gemsofwar/arcane.html">Reference for a mobile game I play</a></div>
- 				<div>I went to a <a href="Hackathon/index.html">hackathon</a> and made a thing!</div>
+ 				<div><a href="gemsofwar/arcane.html">Reference</a> for a mobile game I play.</div>
+ 				<div>I went to a <a href="hackathon/specs.html">hackathon</a> and helped make a thing!</div>
+			</section>
+			<br />
+			<section id="blog">
+				<div class="h3">Thoughts</div>
+				<br />
+				<div class="row">
+					<div class="col-3" id="blog_march302019"><img src="imgs/bc-logo-NEW.png" class="blog-img" alt="bootcampers_collective_logo">
+					</div>
+					<div class="col-9">
+						<p>March 30, 2019</p>
+						<p>Today I went to my first ever hackathon. For the longest time I thought only "real" coders did hackathons and that there was "as-seen-in-the-movies" hacking going on. Which I don't do.</p>
+						<p>In the summer of 2018 I went to my second ever tech conference, <a href="https://developdenver.org/">DVLPDNVR</a>. After seeing what the teams came up with at the  hackathon, I realized
+						<ol>
+							<li> no one does what the hackers do in the moves</li>
+							<li>I could at least help on the front end.
+							</li>
+						</ol></p>
+						<p>We started by filling out a survey as to what language we most wanted to use. React, node, Vue, Ruby. I have zero experience with any of them, but React is so hot right now...</p>
+						<img src="So_Hot_Right_Now.gif" alt="zoolander">
+						<p>Teamed up, with an idea of what we were working toward, at first I felt lost and unable to help. Lots of words. Lots of techs. Did I mention I has just gotten my laptop the night before because I was meaning to get one for a long time to take to meetups and conferences and such? No. Well, that happened.</p>
+						<p>At the moment, I had Chrome, GitHub Desktop, Sublime Text, and because it was recommended, node.js.</p>
+						<p>We were given some user stories. We brainstormed ideas. We brainstormed ways to build the thing. We found tools online to help the planning process: online whiteboards and list-making apps. We decided on our stack. </p>
+						<p>I started by scribbling. Then using the web whiteboard.</p>
+						<img src="hackathon/whiteboard1.png" alt="webwhiteboard">
+						<img src="hackathon/navigation.png" alt="navigationSketch">
+						<p>I am of the opinion that my data modeling skill is one of my strongest. UI/UX Development - needs work.</p>
+						<p>I got to put together two pages with working nav and use bootstrap to make them look a bit better than plain text. My teammates refactored it into React. With React? Something something React.</p>
+						<p>And somewhere along the way the backend went from a relational database to a not relational database. I think my teammates had fun with that.</p>
+					</div>
+				</div>
 			</section>
 		</main>
 
 		<br />
-		<footer>		
+		<footer>
+			<a href="#">Top</a>
+		
 		</footer>
 	</div>
 </body>
