--- a/gemsofwar/arcane.html
+++ b/gemsofwar/arcane.html
@@ -9,6 +9,7 @@
 	
 	<link href="https://fonts.googleapis.com/css?family=Cinzel:400,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="gemsofwar.css">
+	<link rel="stylesheet" type="text/css" href="../css/index.css">
 	
 
 
@@ -19,13 +20,14 @@
 	<nav>
 		<div class="container">
 			<div class="row align-items-center">
-				<div class="col-8">		
-					<div class="h3">Gems of War Arcane Traitstone Reference</div>
+				<div class="col-8">	
+					<h1>Gems of War</h1>
+					<h3>Arcane Traitstones</h3>	
 				</div>
 				<div class="col-2">
-					<a href="https://www.linkedin.com/in/elnorafuentes/"><i class="fab fa-linkedin fa-2x"></i></a>
-					<a href="https://github.com/elnorafuentes"><i class="fab fa-github fa-2x"></i></a>
-					<a href="../index.html">Home</a>
+					<a href="../index.html"><i class="fas fa-home fa-2x fa-icon"></i></a>
+					<a href="https://www.linkedin.com/in/elnorafuentes/"><i class="fab fa-linkedin fa-2x fa-icon"></i></a>
+					<a href="https://github.com/elnorafuentes"><i class="fab fa-github fa-2x fa-icon"></i></a>
 				</div>
 			</div>
 		</div>
