--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					</div>
 					<div class="col-9">
 						<p>March 30, 2019</p>
-						<p>Today I went to my first ever hackathon. For the longest time I thought only "real" coders did hackathons and that there was "as-seen-in-the-movies" hacking going on. Which I don't do.</p>
+						<p>Today I went to my first ever hackathon, hosted by <a href="http://www.bootcamperscollective.com/home">Bootcampers Collective</a>. For the longest time I thought only "real" coders did hackathons and that there was "as-seen-in-the-movies" hacking going on. Which I don't do.</p>
 						<p>In the summer of 2018 I went to my second ever tech conference, <a href="https://developdenver.org/">DVLPDNVR</a>. After seeing what the teams came up with at the  hackathon, I realized
 						<ol>
 							<li> no one does what the hackers do in the moves</li>
