--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<div class="h3">Projects</div>
  				<div><a href="about.html">Grid Practice</a></div>
  				<div><a href="gemsofwar/arcane.html">Reference</a> for a mobile game I play.</div>
- 				<div>I went to a <a href="Hackathon/specs.html">hackathon</a> and helped make a thing!</div>
+ 				<div>I went to a <a href="hackathon/specs.html">hackathon</a> and helped make a thing!</div>
 			</section>
 			<br />
 			<section id="blog">
